--- a/app/src/main/res/layout/activity_java_comments.xml
+++ b/app/src/main/res/layout/activity_java_comments.xml
@@ -86,7 +86,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/P_Operators_textView10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -113,7 +113,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/P_Operators_textView10"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
