--- a/app/src/main/res/layout/activity_java_data_types.xml
+++ b/app/src/main/res/layout/activity_java_data_types.xml
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/P_Operators_textView10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -111,7 +111,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline7"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/P_Operators_textView10"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <Button
