--- a/app/src/main/res/layout/fragment_python_data_types_1.xml
+++ b/app/src/main/res/layout/fragment_python_data_types_1.xml
@@ -127,8 +127,10 @@
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_python_cut"
+            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/p_datatypes_Text3"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/codey_python_cut" />
 
         <TextView
